# oksi-sw-licensing

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  requirements.txt  run-activate.sh  run-oksi-sw.sh
.devcontainer/: Dockerfile  devcontainer.json
docker/activate/: Dockerfile
docker/fingerprint/: Dockerfile
docker/verify/: Dockerfile
scripts/: fingerprint.py  machine-heartbeats.py  oksi_license_cli.py  verify-entrypoint.sh
scripts/distribution/: install.sh  make-fingerprint.sh  make-python-bundle.sh  uninstall.sh
src/: fingerprint.cpp
src/fingerprint/: CMakeLists.txt
src/sw-licensing/: cli.py  fingerprint.py  keygen_crypto.py  verify_machine_file.py
tests/data/: machine-encrypted.lic  machine-unencrypted.lic  mid_test_machine_id.txt
